syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "net.thehuffs.showcase.dataservice.proto";
option java_outer_classname = "FooProto";

message Foos {
  repeated Foo foo = 1;
}

message Foo {
  string id = 1;
  string title = 2;
}


service FooService {
  rpc findById (google.protobuf.StringValue) returns (Foo);
  rpc findAll (google.protobuf.Empty) returns (stream Foo);
  rpc create (Foo) returns (Foo);
  rpc update (Foo) returns (Foo);
  rpc delete (google.protobuf.StringValue) returns (google.protobuf.Empty);
  
}
